Thu Nov  4 07:02:36 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c, file.c, inits.c, random.c, ruby.c, safe.c, thread.c,
	  vm.c, vm.h, vm_core.h: modernization reform.  Without this
	  the souce would not compile.  Even with this it wouldn't
	  pass make test.

Mon Nov  1 21:25:57 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* main.c: <stdlib.h> is needed, to introduce the getenv(3)
          prototype declaration.  Without it a C compiler shall infer
          the getenv type as "int getenv(...);", but this is totally
          wrong, especially when your machine's sizeof(int) and
          sizeof(char*) differs.  On such environment a return value
          of getenv(3), which is in fact a char*, might first casted
          into a int (loses data here), and then casted back to char*
          by automatic integral promotion fo fit to the prototype of
          ruby_set_debug_option().

Thu Mar 18 20:36:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (rb_vmptr_init_options): moved from mvm.c and fixed
	  allocation size.

Thu Mar 18 20:34:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_init2): initialize living_threads here.

Thu Mar 18 18:16:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_spawn): unlock vm for spawned thread.

Thu Mar 18 18:13:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (vm_init_options), ruby.c (rb_vm_options_init): properly
	  initialize rb_vm_options.

Thu Mar 18 15:29:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_spawn): tentative implementation.

Thu Mar 18 14:54:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vmptr_start): renamed from ruby_vm_start.

Thu Mar 18 13:21:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (InitVM_native_thread), vm.c (vm_thread_new):
	  fixed setting current native thread.

Thu Mar 18 10:20:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
